Fixed first section z-index

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -125,6 +125,8 @@ header {
     // background-size: contain;
     // min-height: 45vw;
     // overflow-x: hidden;
+    position: relative;
+    z-index: 5;
     .row {
       min-height: 39em;
       padding-top: 8vw;
